--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -5,7 +5,7 @@
     <!--<uses-permission android:name="android.permission.TEST_BIOMETRIC"
         tools:ignore="ProtectedPermissions" />-->
     <application
-        android:label="raja_c_flutter_biometrics"
+        android:label="${applicationName}"
         android:name="${applicationName}"
         android:icon="@mipmap/ic_launcher"
         android:enableOnBackInvokedCallback="true"
